--- a/src/app/modules/applicant-module/applicant-module.component.html
+++ b/src/app/modules/applicant-module/applicant-module.component.html
@@ -1,47 +1,40 @@
 <ngx-customizable-column-layout  [sideMenuToggle]="sideMenuToggle">
   <div Customizedmenu>
     <div class="row" style="display: flex; justify-content: flex-start; flex-direction: row; padding: 10px;">
-      <div style="background-color: rgba(72, 71, 224, 0.04); padding: 10px;">
+      <!-- <div style="background-color: rgba(72, 71, 224, 0.04); padding: 10px;">
       <h6>Add a keyword</h6>
       <div style="padding: 5px;"></div>
       <span>Create a keyword and never miss a posting</span>
       <div style="padding: 10px;"></div>
-      <input type="text" nbInput fullWidth id="keyword" placeholder="Enter Keyword" style="background-color: #ffffff; color:#95A8B8;">
+      <input type="text" nbInput fullWidth placeholder="Enter Keyword" style="background-color: #ffffff; color:#95A8B8;">
       <div style="padding: 10px;"></div>
       <button type="button" class="btn my-button">Add</button>
-      </div>
-      <div style="padding: 20px;"></div>
+      </div> -->
+
 
       <div class="form-group">
           <h6>Type of Employment</h6>
-          <nb-checkbox>Full Time</nb-checkbox><br>
-          <nb-checkbox>Part Time</nb-checkbox><br>
-          <nb-checkbox>Remote</nb-checkbox><br>
-          <nb-checkbox>Contract</nb-checkbox><br>
+          <nb-checkbox *ngFor="let emptype of employmentTypeData" (click)="filterBySalary(emptype.text)" style="display: flex; flex-direction: column;">{{emptype.text}}</nb-checkbox><br>
       </div>
+
 
         <div class="form-group">
           <h6>Level</h6>
-          <nb-checkbox>Entry Level</nb-checkbox><br>
-          <nb-checkbox>Mid Level</nb-checkbox><br>
-          <nb-checkbox>Intermediate Level</nb-checkbox><br>
-          <nb-checkbox>Senior Level</nb-checkbox><br>
+          <nb-checkbox *ngFor="let level of jobLevelData" (click)="filterByLevel(level.text)" style="display: flex; flex-direction: column;">{{level.text}}</nb-checkbox><br>
         </div>
+
+        <div style="padding: 20px;"></div>
 
         <div class="form-group">
           <h6>Industry</h6>
-          <nb-checkbox>Banking</nb-checkbox><br>
-          <nb-checkbox>Oil & Gas</nb-checkbox><br>
-          <nb-checkbox>Technology</nb-checkbox><br>
-          <nb-checkbox>Finannce</nb-checkbox><br>
+          <nb-checkbox *ngFor="let industry of industryData"(click)="filterByIndustry(industry.text)" style="display: flex; flex-direction: column;">{{industry.text}}</nb-checkbox><br>
         </div>
+
+        <div style="padding: 20px;"></div>
 
         <div class="form-group">
           <h6>Salary</h6>
-          <nb-checkbox>Less than 100k</nb-checkbox><br>
-          <nb-checkbox>100k - 300k</nb-checkbox><br>
-          <nb-checkbox>300k - 500k</nb-checkbox><br>
-          <nb-checkbox>More than 500k</nb-checkbox><br>
+          <nb-checkbox *ngFor="let salary of salaryData" (click)="filterBySalary(salary.range)" style="display: flex; flex-direction: column;">{{salary.range}}</nb-checkbox><br>
         </div>
     </div>
   </div>
