--- a/src/app/modules/applicant-module/applicants/applicants.component.html
+++ b/src/app/modules/applicant-module/applicants/applicants.component.html
@@ -1,6 +1,6 @@
-<div class="flex-child" style="overflow-y: scroll;">
-  <div style="display: flex; flex: auto; justify-content: space-between;">
-    <div class="">
+<div class="flex-child">
+  <div *ngIf="isProfileComplete == false" style="display: flex; flex: auto; justify-content: space-between;">
+    <div>
       <h6>Complete your profile</h6>
       <p>Fill in your details to make your application process faster.</p>
     </div>
@@ -37,18 +37,21 @@
   </div>
   <ngx-template *ngIf="loading == false && jobsCounter > 0">
     <div class="row">
-      <div *ngFor="let job of allJobs" class="col-sm-4 job-items">
-        <div  class="budget-item card" style="margin: 0.3rem; background-color: white; border-radius: 4px; padding: 0.5rem;">
-          <div class="title">{{ job.jobTitle }}</div>
-        <div class="sub-title">{{ job.location }}</div>
-        <div style="padding: 10px;"></div>
-        <div class="job-descrition"><p>{{ job.description }}</p>
+        <div *ngFor="let job of allJobs" class="col-sm-4 job-items">
+          <nb-card>
+            <div style="margin: 0.3rem; background-color: white; border-radius: 4px; padding: 0.5rem;">
+              <div class="title">{{ job.jobTitle }}</div>
+            <div class="sub-title">{{ job.location }}</div>
+            <div style="padding: 10px;"></div>
+            <div class="job-descrition"><p style="text-align: justify;">{{ job.description }}</p>
+            </div>
+            <div>
+              <button class="btn" (click)="jobDetails(job.id)" style="color: #4847E0; border-radius: 4px; background: rgba(72, 71, 224, 0.08);">Apply Now</button>
+            </div>
+            </div>
+          </nb-card>
+         
         </div>
-        <div>
-          <button class="btn" (click)="jobDetails(job.id)" style="color: #4847E0; border-radius: 4px; background: rgba(72, 71, 224, 0.08);">Apply Now</button>
-        </div>
-        </div>
-      </div>
     </div>
 
   </ngx-template>
