--- a/src/app/modules/recruitment/applicantssignup/applicantssignup.component.html
+++ b/src/app/modules/recruitment/applicantssignup/applicantssignup.component.html
@@ -58,11 +58,16 @@
                       </div>
                   </div>
                     <div style="padding: 5px;"></div>
-                  <div class="form-group">
+                  <!-- <div class="form-group">
                     <label for="exampleInputPassword1" class="label">Password</label>
                     <div style="display: flex;border: 0.800000011920929px solid #CED4DA;border-radius: 3px;background-color: #f7f9fc;padding: 5px;">
                       <input type="password" nbInput fullWidth name="password" #password="ngModel" [(ngModel)]="applicantModel.password" placeholder="Password" style="border: none;">
                       <nb-icon  icon="eye-off-outline" style="font-size: 32px;color: #95A8B8;"></nb-icon>
+                      <div *ngIf="password.invalid && (password.dirty || password.touched)" class="error">
+                        <div *ngIf="password.errors.required">
+                          Password is required
+                        </div>
+                    </div>
                     </div>
 
                   </div>
@@ -72,17 +77,41 @@
                     <div style="display: flex;border: 0.800000011920929px solid #CED4DA;border-radius: 3px;background-color: #f7f9fc;padding: 5px;">
                       <input type="password" nbInput fullWidth name="conpassword" (blur)="checkEqualPass()" #conpassword="ngModel" [(ngModel)]="applicantModel.comfirmPassword" placeholder="Confirm Password" style="border: none;">
                       <nb-icon  icon="eye-off-outline" style="font-size: 32px;color: #95A8B8;"></nb-icon>
+                      <div *ngIf="password.invalid && (password.dirty || password.touched)" class="error">
+                        <div *ngIf="password.errors.required">
+                          Password is required
+                        </div>
+                    </div>
                     </div>
 
-                  </div>
+                  </div> -->
 
                   <div class="form-group">
                     <label for="exampleInputPassword1" class="label">Password</label>
                     <div style="display: flex;border: 0.800000011920929px solid #CED4DA;border-radius: 3px;background-color: #f7f9fc;padding: 5px;">
-                      <input type="password" nbInput fullWidth id="exampleInputPassword1" placeholder="Password" style="border: none;">
-                      <nb-icon  icon="eye-off-outline" style="font-size: 32px;color: #95A8B8;"></nb-icon>
+                      <input [type]="show ? 'text' : 'password'" nbInput fullWidth name="password" #password="ngModel"  [(ngModel)]="applicantModel.password" required style="border: none;">
+                      <nb-icon  (click)="viewpassword()" *ngIf="!show"  icon="eye-off-outline" style="font-size: 32px;color: #95A8B8;cursor: pointer;"></nb-icon>
+                      <nb-icon  (click)="viewpassword()" *ngIf="show"  icon="eye-outline" style="font-size: 32px;color: #95A8B8;cursor: pointer;"></nb-icon>
                     </div>
+                    <div *ngIf="password.invalid && (password.dirty || password.touched)" class="error">
+                      <div *ngIf="password.errors.required">
+                        Password is required
+                      </div>
+                  </div>
+                  </div>
 
+                  <div class="form-group">
+                    <label for="exampleInputPassword1" class="label">Confirm Password</label>
+                    <div style="display: flex;border: 0.800000011920929px solid #CED4DA;border-radius: 3px;background-color: #f7f9fc;padding: 5px;">
+                      <input [type]="show ? 'text' : 'password'" nbInput fullWidth name="conpassword" (blur)="checkEqualPass()" #conpassword="ngModel" [(ngModel)]="applicantModel.comfirmPassword" placeholder="Confirm Password" required style="border: none;">
+                      <nb-icon  (click)="viewpassword()" *ngIf="!show"  icon="eye-off-outline" style="font-size: 32px;color: #95A8B8;cursor: pointer;"></nb-icon>
+                      <nb-icon  (click)="viewpassword()" *ngIf="show"  icon="eye-outline" style="font-size: 32px;color: #95A8B8;cursor: pointer;"></nb-icon>
+                    </div>
+                    <div *ngIf="password.invalid && (password.dirty || password.touched)" class="error">
+                      <div *ngIf="password.errors.required">
+                        Password is required
+                      </div>
+                  </div>
                   </div>
 
                   <div style="padding: 5px;"></div>
